--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -77,10 +77,10 @@ $dark-color-success: hsl(150 100% 33%);
       secondary-background: $dark-color-secondary,
       secondary-foreground: $dark-color-white,
       secondary-shadow-focus: color.adjust($dark-color-secondary, $alpha: -0.75),
-      install-background: hsl(207, 39%, 17%),
-      install-background-hover: hsl(207, 23%, 26%),
-      install-foreground: hsl(0, 0%, 100%),
-      install-foreground-hover: hsl(0, 0%, 100%),
+      install-background: hsl(207 39% 17%),
+      install-background-hover: hsl(207 23% 26%),
+      install-foreground: hsl(0 0% 100%),
+      install-foreground-hover: hsl(0 0% 100%),
     ),
     form: (
       background: color.scale($dark-color-black, $lightness: 5%),
